# ili9486-rs

./: .gitignore  Cargo.toml
examples/: benchmark.rs
src/: graphics.rs  graphics_core.rs  lib.rs
