[package]
name = "ili9486"
version = "0.1.0"
description = "Embedded graphics driver for the ILI9486 TFT LCD display"
authors = ["Francis Lalonde <fralalonde@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "display", "LCD"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fralalonde/ili9486-rs"
edition = "2018"

[dependencies]
display-interface = "0.4.1"
embedded-hal = "0.2.4"

[dependencies.embedded-graphics]
optional = true
version = "0.6.2"

[dependencies.embedded-graphics-core]
optional = true
version = "0.3"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
graphics-core = ["embedded-graphics-core"]
